VAL-162 Structure changes in documentation and updated images

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,11 +17,12 @@ pages:
 - Version info: siva/version_info.md
 - Definitions: siva/definitions.md
 - SiVa Service Overview: siva/overview.md
-- Component diagram: siva/component_diagram.md
+- Structure and activities: siva/v2/structure_and_activities.md
+#- Component diagram: siva/component_diagram.md
 - Interfaces: siva/v2/interfaces.md
 - Deployment: siva/v2/deployment.md
-- Use cases: siva/use_cases.md
-- Logging: siva/logging.md
+#- Use cases: siva/use_cases.md
+#- Logging: siva/logging.md
 - Quality Assurance Strategy: siva/qa_strategy.md
 - Test Plan: siva/test_plan.md
 - References: siva/references.md
