MAINTENANCE: Fixing coveralls

--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,7 @@
                         <exclude>**/extra-jars/**</exclude>
                         <exclude>**/ext-lib/**</exclude>
                         <exclude>**/xroad-jars/**</exclude>
+                        <exclude>**/wsdlimport/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
