--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,8 @@
                         <exclude>**/extra-jars/**</exclude>
                         <exclude>**/ext-lib/**</exclude>
                         <exclude>**/xroad-jars/**</exclude>
-                        <exclude>**/wsdlimport/**</exclude>
+                        <exclude>**/ee/openeid/siva/webapp/soap/*.class</exclude>
+                        <exclude>**/eu/x_road/xsd/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
