--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -17,7 +17,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>siva</artifactId>
-        <groupId>io.github.openeid.siva</groupId>
+        <groupId>ee.openid.siva</groupId>
         <version>2.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -101,37 +101,37 @@
             </dependency>
 
             <dependency>
-                <groupId>io.github.openeid.siva</groupId>
+                <groupId>ee.openid.siva</groupId>
                 <artifactId>validation-commons</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.openeid.siva</groupId>
+                <groupId>ee.openid.siva</groupId>
                 <artifactId>pdf-validation-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.openeid.siva</groupId>
+                <groupId>ee.openid.siva</groupId>
                 <artifactId>bdoc-validation-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.openeid.siva</groupId>
+                <groupId>ee.openid.siva</groupId>
                 <artifactId>ddoc-validation-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.openeid.siva</groupId>
+                <groupId>ee.openid.siva</groupId>
                 <artifactId>xroad-validation-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.openeid.siva</groupId>
+                <groupId>ee.openid.siva</groupId>
                 <artifactId>tsl-loader</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>io.github.openeid.siva</groupId>
+                <groupId>ee.openid.siva</groupId>
                 <artifactId>siva-statistics</artifactId>
                 <version>${project.version}</version>
             </dependency>
