--- a/validation-services-parent/ddoc-validation-service/pom.xml
+++ b/validation-services-parent/ddoc-validation-service/pom.xml
@@ -19,7 +19,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>validation-services-parent</artifactId>
-        <groupId>io.github.openeid.siva</groupId>
+        <groupId>ee.openid.siva</groupId>
         <version>2.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -31,7 +31,7 @@
     </description>
     <dependencies>
         <dependency>
-            <groupId>io.github.openeid.siva</groupId>
+            <groupId>ee.openid.siva</groupId>
             <artifactId>validation-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
