--- a/validation-services-parent/pdf-validation-service/pom.xml
+++ b/validation-services-parent/pdf-validation-service/pom.xml
@@ -18,7 +18,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>validation-services-parent</artifactId>
-        <groupId>io.github.openeid.siva</groupId>
+        <groupId>ee.openid.siva</groupId>
         <version>2.0.2-SNAPSHOT</version>
     </parent>
 
@@ -34,14 +34,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.openeid.siva</groupId>
+            <groupId>ee.openid.siva</groupId>
             <artifactId>validation-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <artifactId>tsl-loader</artifactId>
-            <groupId>io.github.openeid.siva</groupId>
+            <groupId>ee.openid.siva</groupId>
             <version>${project.version}</version>
         </dependency>
 
