--- a/validation-services-parent/xroad-validation-service/pom.xml
+++ b/validation-services-parent/xroad-validation-service/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ Copyright 2016 Riigi Infosüsteemide Amet
   ~
@@ -20,7 +19,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>validation-services-parent</artifactId>
-        <groupId>io.github.openeid.siva</groupId>
+        <groupId>ee.openid.siva</groupId>
         <version>2.0.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -30,7 +29,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.github.openeid.siva</groupId>
+            <groupId>ee.openid.siva</groupId>
             <artifactId>validation-commons</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -60,7 +59,8 @@
         </dependency>
 
         <dependency>
-            <groupId>io.github.openeid.siva</groupId>
+            <!--<groupId>io.github.openeid.siva</groupId>-->
+            <groupId>ee.openid.siva</groupId>
             <artifactId>xroad-asice-verifier</artifactId>
             <version>1.0.3</version>
         </dependency>
