--- a/siva-parent/siva-sample-application/src/main/resources/application.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application.yml
@@ -21,6 +21,6 @@ security:
     cache: false
 wro4j:
   filterUrl: /owr
-  cacheName: owr
+#  cacheName: owr
   managerFactory:
     preProcessors: removeSourceMaps, cssUrlRewriting, cssImport, cssMinJawr, semicolonAppender
