[skipci] MAINTENANCE: Fixed type in POM

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,8 @@
             </roles>
         </developer>
         <developer>
-            <name>riit Reiser</name>
+            <id>priitr</id>
+            <name>Priit Reiser</name>
             <roles>
                 <role>developer</role>
             </roles>
