--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,16 +13,13 @@ markdown_extensions:
   - grid_tables
   - def_list
 pages:
+- Version history: siva/version_info.md
 - Introduction: index.md
-- Version info: siva/version_info.md
 - Definitions: siva/definitions.md
 - SiVa Service Overview: siva/overview.md
 - Structure and activities: siva/v2/structure_and_activities.md
-#- Component diagram: siva/component_diagram.md
 - Interfaces: siva/v2/interfaces.md
 - Deployment: siva/v2/deployment.md
-#- Use cases: siva/use_cases.md
-#- Logging: siva/logging.md
 - Quality Assurance: siva/qa_strategy.md
 - References: siva/references.md
 - Appendixes:
