--- a/siva-parent/siva-webapp/src/test/resources/application.yml
+++ b/siva-parent/siva-webapp/src/test/resources/application.yml
@@ -1,1 +1,1 @@
-server.max-http-post-size: 13000000 # 10 MB (+ ~30% base64 encoding overhead)
+server.max-http-post-size: 13981016 # 10 MB + base64 overhead (ceil(10MB / 3) * 4)
