--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ after_success:
 notifications:
   email:
     recipients:
-    - mihkel.selgal@nortal.com
     - andres.voll@nortal.com
     - allan.juhanson@nortal.com
+    - priit.reiser@nortal.com
     on_success: change
     on_failure: always
