--- a/validation-services-parent/xroad-validation-service/src/main/resources/application.yml
+++ b/validation-services-parent/xroad-validation-service/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 8081
+
+management:
+  context-path: /monitoring
+  health:
+      diskspace:
+        enabled: false
+
+endpoints:
+  enabled: false
+  sensitive: true
