--- a/siva-parent/siva-sample-application/pom.xml
+++ b/siva-parent/siva-sample-application/pom.xml
@@ -56,6 +56,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ee.openid.siva</groupId>
+            <artifactId>siva-monitoring</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Spring Boot Jade -->
         <dependency>
@@ -187,6 +192,19 @@
                 </executions>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <SiVa-Webapp-Name>${project.artifactId}</SiVa-Webapp-Name>
+                            <SiVa-Webapp-Version>${project.version}</SiVa-Webapp-Version>
+                            <SiVa-Webapp-Build-Time>${maven.build.timestamp}</SiVa-Webapp-Build-Time>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.4.11</version>
@@ -263,6 +281,13 @@
                         <artifactId>maven-war-plugin</artifactId>
                         <version>2.6</version>
                         <configuration>
+                            <archive>
+                                <manifestEntries>
+                                    <SiVa-Webapp-Name>${project.artifactId}</SiVa-Webapp-Name>
+                                    <SiVa-Webapp-Version>${project.version}</SiVa-Webapp-Version>
+                                    <SiVa-Webapp-Build-Time>${maven.build.timestamp}</SiVa-Webapp-Build-Time>
+                                </manifestEntries>
+                            </archive>
                             <failOnMissingWebXml>false</failOnMissingWebXml>
                         </configuration>
                     </plugin>
