--- a/siva-parent/siva-sample-application/src/main/resources/application.yml
+++ b/siva-parent/siva-sample-application/src/main/resources/application.yml
@@ -14,6 +14,9 @@ spring:
       spec: maximumSize=100,expireAfterAccess=20s
 management:
   context-path: /monitoring
+  health:
+    diskspace:
+      enabled: false
 security:
   basic:
     path: /monitoring/**
@@ -24,3 +27,9 @@ wro4j:
 #  cacheName: owr
   managerFactory:
     preProcessors: removeSourceMaps, cssUrlRewriting, cssImport, cssMinJawr, semicolonAppender
+endpoints:
+  enabled: false
+  sensitive: true
+  health:
+    enabled: true
+    sensitive: true
