--- a/siva-parent/siva-webapp/src/main/resources/application.yml
+++ b/siva-parent/siva-webapp/src/main/resources/application.yml
@@ -1,1 +1,18 @@
 server.max-http-post-size: 13981016 # 10 MB + base64 overhead (ceil(10MB / 3) * 4)
+
+siva:
+  proxy:
+    xroadUrl: http://localhost:8081
+
+management:
+  context-path: /monitoring
+  health:
+    diskspace:
+      enabled: false
+
+endpoints:
+  enabled: false
+  sensitive: true
+
+
+
