[SIVA-50] datafiles demo app update [SIVA-51] REST API datafiles [SIVA-52] SOAP API datafiles; refactoring

--- a/siva-parent/siva-webapp/pom.xml
+++ b/siva-parent/siva-webapp/pom.xml
@@ -163,6 +163,7 @@
                         <configuration>
                             <wsdlUrls>
                                 <wsdlUrl>src/main/resources/wsdl/siva.wsdl</wsdlUrl>
+                                <wsdlUrl>src/main/resources/wsdl/siva-datafiles.wsdl</wsdlUrl>
                             </wsdlUrls>
                             <sourceDestDir>target/generated-sources/wsdlimport/siva</sourceDestDir>
                             <vmArgs>
