--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -44,7 +44,7 @@
         <junit.version>4.12</junit.version>
         <mockito.version>2.0.2-beta</mockito.version>
         <powermock.version>1.6.2</powermock.version>
-        <dss.version>4.7.RC2.d4j.1</dss.version>
+        <dss.version>5.0.d4j.1</dss.version>
         <cxf.version>3.1.4</cxf.version>
         <powermock.version>1.6.5</powermock.version>
     </properties>
@@ -71,6 +71,12 @@
                 <groupId>org.digidoc4j.dss</groupId>
                 <artifactId>dss-spi</artifactId>
                 <version>${dss.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.bouncycastle</groupId>
+                        <artifactId>*</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- Spring boot -->
