--- a/validation-services-parent/pom.xml
+++ b/validation-services-parent/pom.xml
@@ -37,9 +37,9 @@
     <properties>
         <project.encoding>UTF-8</project.encoding>
         <language.level>1.8</language.level>
-        <dss.version>4.7.RC2.d4j.1</dss.version>
+        <dss.version>5.0.d4j.1</dss.version>
         <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
-        <digidoc4j.version>1.0.5</digidoc4j.version>
+        <digidoc4j.version>1.0.7.beta.1</digidoc4j.version>
         <powermock.version>1.6.5</powermock.version>
     </properties>
 
@@ -75,7 +75,11 @@
                 <artifactId>cryptacular</artifactId>
                 <version>1.1.0</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.6</version>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-core</artifactId>
@@ -114,6 +118,11 @@
     </dependencyManagement>
 
     <repositories>
+        <repository>
+            <id>cefdigital</id>
+            <name>cefdigital</name>
+            <url>https://ec.europa.eu/cefdigital/artifact/content/repositories/esignaturedss/</url>
+        </repository>
         <repository>
             <id>spring-snapshots</id>
             <url>http://repo.spring.io/snapshot</url>
