--- a/.travis.yml
+++ b/.travis.yml
@@ -28,17 +28,14 @@ branchespython-dev:
   - develop
 install: true
 before_script: ls -al $TMPDIR
-script: ./mvnw clean install -q
+script: ./mvnw clean install -e
 after_success:
 - "./mvnw jacoco:report coveralls:report -q -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN"
 notifications:
   email:
     recipients:
     - andres.voll@nortal.com
-    - allan.juhanson@nortal.com
-    - priit.reiser@nortal.com
-    - vadim.pudov@nortal.com
     - aare.nurm@nortal.com
-    - julia.solovei@nortal.com
+    - siim.suu@nortal.com
     on_success: change
     on_failure: always
