PDF validator to generic. Sample application fixes.

--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -65,7 +65,7 @@
         </dependency>
         <dependency>
             <groupId>ee.openid.siva</groupId>
-            <artifactId>pdf-validation-service</artifactId>
+            <artifactId>generic-validation-service</artifactId>
         </dependency>
         <dependency>
             <groupId>ee.openid.siva</groupId>
