--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -114,7 +114,7 @@
             </dependency>
             <dependency>
                 <groupId>ee.openid.siva</groupId>
-                <artifactId>pdf-validation-service</artifactId>
+                <artifactId>generic-validation-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
