SIVARIA2-13 adesQc constraint updated + fixes + refacto

--- a/validation-services-parent/generic-validation-service/src/main/resources/application-test.yaml
+++ b/validation-services-parent/generic-validation-service/src/main/resources/application-test.yaml
@@ -12,7 +12,7 @@ siva:
           name: POLv4
           description: Policy for validating Qualified Electronic Signatures and Qualified Electronic Seals (according to Regulation (EU) No 910/2014). I.e. signatures that have been recognized as Advanced electronic Signatures (AdES) do not produce a positive validation result.
           url: http://open-eid.github.io/SiVa/siva/appendix/validation_policy/#POLv4
-          constraintPath: generic_constraint_ades.xml
+          constraintPath: generic_constraint_ades_qc.xml
           allowCrlRevocationSource: false
         -
           name: POLv5
