SIVARIA2-39 initial classes + bug fixes

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -2,6 +2,7 @@
 
 validation.error.message.base64 = Document is not encoded in a valid base64 string
 validation.error.message.documentType = Invalid document type
+validation.error.message.reportType = Invalid report type
 validation.error.message.documentType.dataFiles = Invalid document type. Can only return data files for DDOC type containers.
 validation.error.message.filename = Invalid filename
 validation.error.message.signaturePolicy = Invalid signature policy
