--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -3,8 +3,8 @@
 validation.error.message.base64 = Document is not encoded in a valid base64 string
 validation.error.message.documentType = Invalid document type
 validation.error.message.reportType = Invalid report type
-validation.error.message.documentType.dataFiles = Invalid document type. Can only return data files for DDOC type containers.
 validation.error.message.filename = Invalid filename
+validation.error.message.dataFile.filename = Invalid filename. Can only return data files for DDOC type containers.
 validation.error.message.signaturePolicy = Invalid signature policy
 validation.error.message.general = Invalid value
 validation.error.message.invalidRequest = Invalid request
