SIVARIA2-54 POC for signing the validation report

--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -35,6 +35,7 @@
         <module>siva-distribution</module>
         <module>siva-statistics</module>
         <module>siva-monitoring</module>
+        <module>siva-signature-service</module>
     </modules>
 
     <properties>
