SIVARIA2-64 Report signature in AsicE format

--- a/siva-parent/siva-signature-service/pom.xml
+++ b/siva-parent/siva-signature-service/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>org.digidoc4j.dss</groupId>
-            <artifactId>dss-xades</artifactId>
+            <artifactId>dss-asic-xades</artifactId>
             <version>${dss.version}</version>
         </dependency>
         <dependency>
