SIVARIA2-56 SIVARIA2-57 Configurable report signature service

--- a/siva-parent/siva-test/src/test/resources/application-test.yml
+++ b/siva-parent/siva-test/src/test/resources/application-test.yml
@@ -3,3 +3,10 @@ endpoints:
     enabled: true
 plugtest:
   location: url
+siva:
+  webapp:
+    reportSignatureEnabled: true
+  signatureService:
+    keystorePath: src/test/resources/test.p12
+    keystorePassword: password
+    signatureLevel: XAdES_BASELINE_B
