--- a/siva-parent/pom.xml
+++ b/siva-parent/pom.xml
@@ -43,7 +43,7 @@
         <language.level>1.8</language.level>
         <spring.boot.version>1.4.1.RELEASE</spring.boot.version>
         <junit.version>4.12</junit.version>
-        <mockito.version>2.0.2-beta</mockito.version>
+        <mockito.version>2.10.0</mockito.version>
         <powermock.version>1.6.2</powermock.version>
         <dss.version>5.0.d4j.3</dss.version>
         <cxf.version>3.1.4</cxf.version>
@@ -290,7 +290,13 @@
                 <version>3.1</version>
             </dependency>
 
-            <!-- Powermock for testing -->
+            <!-- Test dependencies -->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.powermock</groupId>
                 <artifactId>powermock-api-mockito</artifactId>
