--- a/validation-services-parent/timestamptoken-validation-service/pom.xml
+++ b/validation-services-parent/timestamptoken-validation-service/pom.xml
@@ -81,10 +81,12 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.52</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.52</version>
         </dependency>
 
 
