SIVARIA2-89 Option to turn off dependency check for build, but enabled by default

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ branchespython-dev:
   - develop
 install: true
 before_script: ls -al $TMPDIR
-script: ./mvnw clean install -q
+script: ./mvnw clean install -q -P\!dependency-check
 after_success:
 - "./mvnw jacoco:report coveralls:report -q -Dcoveralls.repo.token=$COVERALLS_REPO_TOKEN"
 notifications:
