--- a/validation-services-parent/tsl-loader/pom.xml
+++ b/validation-services-parent/tsl-loader/pom.xml
@@ -87,9 +87,9 @@
             <version>2.5</version>
         </dependency>
         <dependency>
-            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <groupId>org.digidoc4j.dss</groupId>
             <artifactId>dss-utils-apache-commons</artifactId>
-            <version>5.1.RC1</version>
+            <version>5.1.RC1.d4j.1</version>
         </dependency>
     </dependencies>
 
