SIVARIA2-96 Bring X-Road validation service inside SiVa webapp

--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -87,6 +87,10 @@
         </dependency>
         <dependency>
             <groupId>ee.openid.siva</groupId>
+            <artifactId>xroad-validation-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ee.openid.siva</groupId>
             <artifactId>siva-statistics</artifactId>
         </dependency>
 
