--- a/siva-parent/siva-test/src/test/resources/application-test.yml
+++ b/siva-parent/siva-test/src/test/resources/application-test.yml
@@ -13,9 +13,10 @@ siva:
   webapp:
     reportSignatureEnabled: true
   signatureService:
-    signatureLevel: XAdES_BASELINE_B
+    signatureLevel: XAdES_BASELINE_LT
     tspUrl: http://demo.sk.ee/tsa
     ocspUrl: http://demo.sk.ee/ocsp
     pkcs12:
-      path: src/test/resources/test.p12
-      password: password
+          path: src/test/resources/test.p12
+          password: password
+
