SIVARIA2-118 calculating request hash depending on conf

--- a/siva-parent/siva-test/src/test/resources/application-test.yml
+++ b/siva-parent/siva-test/src/test/resources/application-test.yml
@@ -10,7 +10,7 @@ plugtest:
   location: url
 
 siva:
-  webapp:
+  report:
     reportSignatureEnabled: true
   signatureService:
     signatureLevel: XAdES_BASELINE_LT
