--- a/siva-parent/siva-signature-service/pom.xml
+++ b/siva-parent/siva-signature-service/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <artifactId>siva-parent</artifactId>
         <groupId>ee.openid.siva</groupId>
-        <version>2.0.3-SNAPSHOT</version>
+        <version>3.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
