Added digest validation service functionality
Signed-off-by: Indrek Jentson <indrek.jentson@cgi.com>

--- a/siva-parent/siva-validation-proxy/pom.xml
+++ b/siva-parent/siva-validation-proxy/pom.xml
@@ -89,6 +89,11 @@
             <groupId>ee.openid.siva</groupId>
             <artifactId>siva-statistics</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ee.openid.siva</groupId>
+            <artifactId>digest-validation-service</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
     </dependencies>
 
