--- a/validation-services-parent/generic-validation-service/pom.xml
+++ b/validation-services-parent/generic-validation-service/pom.xml
@@ -100,6 +100,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.digidoc4j</groupId>
+            <artifactId>digidoc4j</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
