VALIDATE-WITH-HASH - Initial REST endpoint

--- a/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
+++ b/siva-parent/siva-webapp/src/main/resources/ValidationMessages.properties
@@ -8,3 +8,5 @@ validation.error.message.dataFile.filename = Invalid filename. Can only return d
 validation.error.message.signaturePolicy = Invalid signature policy
 validation.error.message.general = Invalid value
 validation.error.message.invalidRequest = Invalid request
+validation.error.message.hashAlgo=Invalid hash algorithm
+validation.error.message.signatureExtension=Invalid filename. Can only accept xml files.
